Fix bugg on safari

--- a/src/components/calculator/index.css
+++ b/src/components/calculator/index.css
@@ -14,7 +14,7 @@
   padding: 0.5em;
   border: none;
   border-radius: 25px;
-  user-select: none;
+  /* user-select: none; */ /* Buggy on safari! */
 }
 
 .input:focus {
